[package]
name = "deepgram_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
crossbeam-channel = "0.5.11"
deepgram = { git = "https://github.com/cs50victor/deepgram-rust-sdk.git", branch = "live-fork" }
ezsockets = { version = "0.6.1", features = ["rustls"] }
futures = "0.3.30"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde_json = "1.0.111"
tokio = { version = "1.17.0", features = ["full"] }
