[package]
name = "deepgram_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
crossbeam-channel = "0.5.11"
deepgram = "0.4.0"
ezsockets = { version = "0.6.1", features = ["rustls"] } # you might run into issues without this feature. I did
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde_json = "1.0.111"
tokio = { version = "1.17.0", features = ["full"] }
